src/pen/penParser.py
# Generated from pen.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class penParser ( Parser ):

    grammarFileName = "pen.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'orientation'", "';'", "'pressure'", 
                     "'thickness'", "'color'", "'position'", "'('", "','", 
                     "')'", "'up'", "'down'", "'forward'", "'backward'", 
                     "'left'", "'right'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Integer", "Real", "WS" ]

    RULE_program = 0
    RULE_command = 1
    RULE_setOrientation = 2
    RULE_setPressure = 3
    RULE_setThickness = 4
    RULE_setColor = 5
    RULE_setPosition = 6
    RULE_penControl = 7
    RULE_penMove = 8
    RULE_rotate = 9
    RULE_expr = 10

    ruleNames =  [ "program", "command", "setOrientation", "setPressure", 
                   "setThickness", "setColor", "setPosition", "penControl", 
                   "penMove", "rotate", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    Integer=16
    Real=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(penParser.EOF, 0)

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(penParser.CommandContext)
            else:
                return self.getTypedRuleContext(penParser.CommandContext,i)


        def getRuleIndex(self):
            return penParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = penParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 64634) != 0):
                self.state = 22
                self.command()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(penParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setOrientation(self):
            return self.getTypedRuleContext(penParser.SetOrientationContext,0)


        def setPressure(self):
            return self.getTypedRuleContext(penParser.SetPressureContext,0)


        def setThickness(self):
            return self.getTypedRuleContext(penParser.SetThicknessContext,0)


        def setColor(self):
            return self.getTypedRuleContext(penParser.SetColorContext,0)


        def setPosition(self):
            return self.getTypedRuleContext(penParser.SetPositionContext,0)


        def penControl(self):
            return self.getTypedRuleContext(penParser.PenControlContext,0)


        def penMove(self):
            return self.getTypedRuleContext(penParser.PenMoveContext,0)


        def rotate(self):
            return self.getTypedRuleContext(penParser.RotateContext,0)


        def getRuleIndex(self):
            return penParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = penParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.setOrientation()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.setPressure()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.setThickness()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.setColor()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 34
                self.setPosition()
                pass
            elif token in [10, 11]:
                self.enterOuterAlt(localctx, 6)
                self.state = 35
                self.penControl()
                pass
            elif token in [12, 13]:
                self.enterOuterAlt(localctx, 7)
                self.state = 36
                self.penMove()
                pass
            elif token in [14, 15]:
                self.enterOuterAlt(localctx, 8)
                self.state = 37
                self.rotate()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetOrientationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(penParser.ExprContext,0)


        def getRuleIndex(self):
            return penParser.RULE_setOrientation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetOrientation" ):
                listener.enterSetOrientation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetOrientation" ):
                listener.exitSetOrientation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetOrientation" ):
                return visitor.visitSetOrientation(self)
            else:
                return visitor.visitChildren(self)




    def setOrientation(self):

        localctx = penParser.SetOrientationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_setOrientation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(penParser.T__0)
            self.state = 41
            self.expr()
            self.state = 42
            self.match(penParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetPressureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(penParser.ExprContext,0)


        def getRuleIndex(self):
            return penParser.RULE_setPressure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetPressure" ):
                listener.enterSetPressure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetPressure" ):
                listener.exitSetPressure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetPressure" ):
                return visitor.visitSetPressure(self)
            else:
                return visitor.visitChildren(self)




    def setPressure(self):

        localctx = penParser.SetPressureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_setPressure)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(penParser.T__2)
            self.state = 45
            self.expr()
            self.state = 46
            self.match(penParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetThicknessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(penParser.ExprContext,0)


        def getRuleIndex(self):
            return penParser.RULE_setThickness

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetThickness" ):
                listener.enterSetThickness(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetThickness" ):
                listener.exitSetThickness(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetThickness" ):
                return visitor.visitSetThickness(self)
            else:
                return visitor.visitChildren(self)




    def setThickness(self):

        localctx = penParser.SetThicknessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_setThickness)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(penParser.T__3)
            self.state = 49
            self.expr()
            self.state = 50
            self.match(penParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetColorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(penParser.ExprContext,0)


        def getRuleIndex(self):
            return penParser.RULE_setColor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetColor" ):
                listener.enterSetColor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetColor" ):
                listener.exitSetColor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetColor" ):
                return visitor.visitSetColor(self)
            else:
                return visitor.visitChildren(self)




    def setColor(self):

        localctx = penParser.SetColorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_setColor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(penParser.T__4)
            self.state = 53
            self.expr()
            self.state = 54
            self.match(penParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetPositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(penParser.ExprContext)
            else:
                return self.getTypedRuleContext(penParser.ExprContext,i)


        def getRuleIndex(self):
            return penParser.RULE_setPosition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetPosition" ):
                listener.enterSetPosition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetPosition" ):
                listener.exitSetPosition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetPosition" ):
                return visitor.visitSetPosition(self)
            else:
                return visitor.visitChildren(self)




    def setPosition(self):

        localctx = penParser.SetPositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_setPosition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(penParser.T__5)
            self.state = 57
            self.match(penParser.T__6)
            self.state = 58
            self.expr()
            self.state = 59
            self.match(penParser.T__7)
            self.state = 60
            self.expr()
            self.state = 61
            self.match(penParser.T__8)
            self.state = 62
            self.match(penParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PenControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return penParser.RULE_penControl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenControl" ):
                listener.enterPenControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenControl" ):
                listener.exitPenControl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenControl" ):
                return visitor.visitPenControl(self)
            else:
                return visitor.visitChildren(self)




    def penControl(self):

        localctx = penParser.PenControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_penControl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            _la = self._input.LA(1)
            if not(_la==10 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 65
            self.match(penParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PenMoveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(penParser.ExprContext,0)


        def getRuleIndex(self):
            return penParser.RULE_penMove

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenMove" ):
                listener.enterPenMove(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenMove" ):
                listener.exitPenMove(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenMove" ):
                return visitor.visitPenMove(self)
            else:
                return visitor.visitChildren(self)




    def penMove(self):

        localctx = penParser.PenMoveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_penMove)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 68
            self.expr()
            self.state = 69
            self.match(penParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RotateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(penParser.ExprContext,0)


        def getRuleIndex(self):
            return penParser.RULE_rotate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRotate" ):
                listener.enterRotate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRotate" ):
                listener.exitRotate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRotate" ):
                return visitor.visitRotate(self)
            else:
                return visitor.visitChildren(self)




    def rotate(self):

        localctx = penParser.RotateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_rotate)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not(_la==14 or _la==15):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 72
            self.expr()
            self.state = 73
            self.match(penParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Integer(self):
            return self.getToken(penParser.Integer, 0)

        def Real(self):
            return self.getToken(penParser.Real, 0)

        def expr(self):
            return self.getTypedRuleContext(penParser.ExprContext,0)


        def getRuleIndex(self):
            return penParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = penParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(penParser.Integer)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(penParser.Real)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.match(penParser.T__6)
                self.state = 78
                self.expr()
                self.state = 79
                self.match(penParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





